# start/routes.ts
@@ -52,7 +52,6 @@ Route.group(() => {
     Route.post('/plans/:id/athletes/:athlete_id', 'PlansController.addAthlete') // /api/v1/plans/exercises/athlete/:id/:athlete_id
     Route.delete('/plans/:id/athlete/:athlete_id', 'PlansController.removeAthlete') // /api/v1/plans/athlete/:id/:athlete_id
     Route.patch('/plans/:id/athletes/:athlete_id/likes', 'PlansController.addLike') // /api/v1/plans/exercises/athlete/:id/:athlete_id/likes
-    Route.patch('/plans/:id/athletes/:athlete_id/completions', 'PlansController.addCompleted') // /api/v1/plans/exercises/athlete/:id/:athlete_id/completions
     Route.post('/plans/:id/exercises/:exercise_id', 'PlansController.addExercise') // /api/v1/plans/:id/:exercise_id
     Route.post('/plans/:id/athletes/:athlete_id/califications', 'PlansController.addCalification') // /api/v1/plans/exercises/athlete/:id/:athlete_id/califications
     Route.resource('exercises', 'ExercisesController').except(['create', 'edit']) // /api/v1/exercises
